--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "antd",
-  "version": "3.2.3",
-  "title": "Ant Design",
+  "name": "oui-antd",
+  "version": "1.0.0",
+  "title": "Ant Design - OUI",
   "description": "An enterprise-class UI design language and React-based implementation",
   "homepage": "http://ant.design/",
   "keywords": [
@@ -20,10 +20,10 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/ant-design/ant-design"
+    "url": "https://github.com/twobin/ant-design"
   },
   "bugs": {
-    "url": "https://github.com/ant-design/ant-design/issues"
+    "url": "https://github.com/twobin/ant-design/issues"
   },
   "main": "lib/index.js",
   "module": "es/index.js",
