--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "oui-antd",
-  "version": "1.0.5",
+  "version": "1.0.8",
   "title": "Ant Design - OUI",
   "description": "An enterprise-class UI design language and React-based implementation",
   "homepage": "http://ant.design/",
@@ -187,12 +187,12 @@
     "test-all": "./scripts/test-all.sh",
     "lint": "npm run lint:ts && npm run lint:es && npm run lint:demo && npm run lint:style",
     "lint:ts": "npm run tsc && antd-tools run ts-lint",
-    "lint:es": "eslint tests site scripts components ./.*.js ./webpack.config.js --ext '.js,.jsx'",
+    "lint:es": "eslint tests scripts components ./.*.js ./webpack.config.js --ext '.js,.jsx'",
     "lint:demo": "cross-env RUN_ENV=DEMO eslint components/*/demo/*.md --ext '.md'",
-    "lint:style": "stylelint \"{site,components}/**/*.less\" --syntax less",
+    "lint:style": "stylelint \"{components}/**/*.less\" --syntax less",
     "lint-fix:ts": "npm run tsc && antd-tools run ts-lint-fix",
     "lint-fix": "npm run lint-fix:code && npm run lint-fix:demo",
-    "lint-fix:code": "eslint --fix tests site scripts components ./.*.js ./webpack.config.js --ext '.js,.jsx'",
+    "lint-fix:code": "eslint --fix tests scripts components ./.*.js ./webpack.config.js --ext '.js,.jsx'",
     "lint-fix:demo": "eslint-tinker ./components/*/demo/*.md",
     "sort-api": "node ./scripts/sort-api-table.js",
     "dist": "antd-tools run dist",
